--- a/decwiki/wiki/templates/3D-Card-Carousel-master/index.html
+++ b/decwiki/wiki/templates/3D-Card-Carousel-master/index.html
@@ -101,6 +101,27 @@
         </div>
     </div>
 
+
+
+    <div class="container d-flex justify-content-center mt-100">
+    <div class="row">
+        <div class="col-md-12">
+        
+        <h2>Uplode Article</h2>
+
+<div class="file-drop-area">
+  <span class="choose-file-button">Choose files</span>
+  <span class="file-message">or drag and drop files here</span>
+  <input class="file-input" type="file" multiple>
+</div>
+            
+        </div>
+        
+    </div>
+    
+    
+</div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main.js"></script>
 
